--- a/bin/application/mainView.fxml
+++ b/bin/application/mainView.fxml
@@ -14,7 +14,7 @@
    <children>
       <AnchorPane layoutX="185.0" prefHeight="665.0" prefWidth="590.0" style="-fx-background-color: #ffff;">
          <children>
-            <Label id="mainLabel" fx:id="mainLable" layoutX="76.0" layoutY="14.0" prefHeight="70.0" prefWidth="504.0" text="MainLabel" textFill="#8a8a8a">
+            <Label id="mainLabel" fx:id="mainLable" layoutX="44.0" layoutY="14.0" prefHeight="70.0" prefWidth="504.0" text="select" textFill="#8a8a8a">
                <font>
                   <Font size="48.0" />
                </font>
@@ -22,14 +22,14 @@
             <AnchorPane layoutX="32.0" layoutY="202.0" prefHeight="443.0" prefWidth="612.0">
                <children>
                   <Label layoutX="12.0" layoutY="32.0" prefHeight="17.0" prefWidth="180.0" text="Plain Text" textFill="#8a8a8a" />
-                  <JFXTextField fx:id="key2TextField" focusColor="#4786c1" layoutX="14.0" layoutY="251.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
+                  <JFXTextField fx:id="key2TextField" focusColor="#4786c1" layoutX="14.0" layoutY="216.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
                   <JFXButton fx:id="encrypt_btn" layoutX="448.0" layoutY="32.0" onAction="#encrypt" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Encrypt" />
-                  <JFXTextField fx:id="key1TextField" focusColor="#4786c1" layoutX="14.0" layoutY="203.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5;" />
-                  <Label layoutX="12.0" layoutY="285.0" prefHeight="17.0" prefWidth="180.0" text="Cipher Text" textFill="#8a8a8a" />
-                  <JFXTextArea fx:id="plainTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="49.0" prefHeight="130.0" prefWidth="401.0" style="-fx-background-color: #F5F5F5;" />
-                  <JFXTextArea fx:id="cipherTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="302.0" prefHeight="130.0" prefWidth="401.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
-                  <Label fx:id="key1Label" layoutX="12.0" layoutY="186.0" prefHeight="17.0" prefWidth="180.0" text="Key1" textFill="#8a8a8a" />
-                  <Label fx:id="key2Label" layoutX="12.0" layoutY="234.0" prefHeight="17.0" prefWidth="180.0" text="Key2" textFill="#8a8a8a" />
+                  <JFXTextField fx:id="key1TextField" focusColor="#4786c1" layoutX="14.0" layoutY="168.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5;" />
+                  <Label layoutX="12.0" layoutY="250.0" prefHeight="17.0" prefWidth="180.0" text="Cipher Text" textFill="#8a8a8a" />
+                  <JFXTextArea fx:id="plainTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="49.0" prefHeight="90.0" prefWidth="401.0" style="-fx-background-color: #F5F5F5;" />
+                  <JFXTextArea fx:id="cipherTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="267.0" prefHeight="90.0" prefWidth="401.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
+                  <Label fx:id="key1Label" layoutX="12.0" layoutY="151.0" prefHeight="17.0" prefWidth="180.0" text="Key1" textFill="#8a8a8a" />
+                  <Label fx:id="key2Label" layoutX="12.0" layoutY="199.0" prefHeight="17.0" prefWidth="180.0" text="Key2" textFill="#8a8a8a" />
                   <JFXButton fx:id="decrypt_btn" layoutX="448.0" layoutY="83.0" onAction="#decrypt" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Decrypt" />
                   <JFXButton fx:id="hash_btn" layoutX="448.0" layoutY="131.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Hash" />
                   <JFXButton fx:id="hmac_btn" layoutX="448.0" layoutY="182.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="HMAC" />
@@ -37,7 +37,7 @@
                   <JFXButton fx:id="save_btn" layoutX="448.0" layoutY="282.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Save" />
                </children>
             </AnchorPane>
-            <Label fx:id="description" alignment="TOP_LEFT" layoutX="76.0" layoutY="84.0" prefHeight="130.0" prefWidth="556.0" text="des" textFill="#8a8a8a">
+            <Label fx:id="description" alignment="TOP_LEFT" layoutX="44.0" layoutY="84.0" prefHeight="130.0" prefWidth="556.0" text="des" textFill="#8a8a8a">
                <font>
                   <Font name="Andale Mono" size="24.0" />
                </font>
