--- a/src/application/mainView.fxml
+++ b/src/application/mainView.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,11 +22,11 @@
             </Label>
             <AnchorPane layoutX="32.0" layoutY="202.0" prefHeight="443.0" prefWidth="612.0">
                <children>
-                  <Label layoutX="12.0" layoutY="32.0" prefHeight="17.0" prefWidth="180.0" text="Plain Text" textFill="#8a8a8a" />
+                  <Label fx:id="PlainTextLable" layoutX="12.0" layoutY="32.0" prefHeight="17.0" prefWidth="180.0" text="Plain Text" textFill="#8a8a8a" />
                   <JFXTextField fx:id="key2TextField" focusColor="#4786c1" layoutX="14.0" layoutY="216.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
                   <JFXButton fx:id="encrypt_btn" layoutX="448.0" layoutY="32.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Encrypt" />
                   <JFXTextField fx:id="key1TextField" focusColor="#4786c1" layoutX="14.0" layoutY="168.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #f5f5f5;" />
-                  <Label layoutX="12.0" layoutY="250.0" prefHeight="17.0" prefWidth="180.0" text="Cipher Text" textFill="#8a8a8a" />
+                  <Label fx:id="CipherTextLable" layoutX="12.0" layoutY="250.0" prefHeight="17.0" prefWidth="180.0" text="Cipher Text" textFill="#8a8a8a" />
                   <JFXTextArea fx:id="plainTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="49.0" prefHeight="90.0" prefWidth="401.0" style="-fx-background-color: #F5F5F5;" />
                   <JFXTextArea fx:id="cipherTextArea" focusColor="#4786c1" layoutX="12.0" layoutY="267.0" prefHeight="90.0" prefWidth="401.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
                   <Label fx:id="key1_label" layoutX="12.0" layoutY="151.0" prefHeight="17.0" prefWidth="180.0" text="Key1" textFill="#8a8a8a" />
@@ -35,6 +36,10 @@
                   <JFXButton fx:id="hmac_btn" layoutX="448.0" layoutY="182.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="HMAC" />
                   <JFXButton fx:id="DigitalSignature_btn" layoutX="448.0" layoutY="234.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Digital signature" />
                   <JFXButton fx:id="save_btn" layoutX="448.0" layoutY="282.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="Save" />
+                  <ChoiceBox fx:id="choiceBox" layoutX="231.0" layoutY="168.0" prefHeight="27.0" prefWidth="178.0" />
+                  <Label fx:id="nTextlable" layoutX="231.0" layoutY="200.0" text="n" />
+                  <JFXTextField fx:id="nTextField" focusColor="#4786c1" layoutX="231.0" layoutY="216.0" prefHeight="27.0" prefWidth="178.0" style="-fx-background-color: #f5f5f5#f5f5f5;" />
+                  <JFXButton fx:id="generate_btn" layoutX="448.0" layoutY="182.0" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #F5f5f5;" text="generate" />
                </children>
             </AnchorPane>
             <Label fx:id="description" alignment="TOP_LEFT" layoutX="44.0" layoutY="84.0" prefHeight="130.0" prefWidth="556.0" text="des" textFill="#8a8a8a">
